--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.4",
     "web-vitals": "^2.1.4"
-  
-
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,5 +51,4 @@
     "ancestorSeparator": " › ",
     "usePathForSuiteName": "true"
   }
-  
 }
